@@ -24,7 +24,9 @@ import org.apache.commons.lang3.StringUtils;
 
 import org.apache.tika.exception.TikaException;
 import org.apache.tika.metadata.Metadata;
+import org.apache.tika.pipes.fetcher.Fetcher;
 import org.apache.tika.pipes.fetcher.FetcherManager;
+import org.apache.tika.pipes.fetcher.RangeFetcher;
 
 /**
  * This class looks for &quot;fileUrl&quot; in the http header.  If it is not null
@@ -54,18 +56,54 @@ public class FetcherStreamFactory implements InputStreamFactory {
             throws IOException {
         String fetcherName = httpHeaders.getHeaderString("fetcherName");
         String fetchKey = httpHeaders.getHeaderString("fetchKey");
+        long fetchRangeStart = getLong(httpHeaders.getHeaderString("fetchRangeStart"));
+        long fetchRangeEnd = getLong(httpHeaders.getHeaderString("fetchRangeEnd"));
         if (StringUtils.isBlank(fetcherName) != StringUtils.isBlank(fetchKey)) {
             throw new IOException("Must specify both a 'fetcherName' and a 'fetchKey'. I see: " +
                     " fetcherName:" + fetcherName + " and fetchKey:" + fetchKey);
         }
+        if (fetchRangeStart < 0 && fetchRangeEnd > -1) {
+            throw new IllegalArgumentException("fetchRangeStart must be > -1 if a fetchRangeEnd " +
+                    "is specified");
+        }
+
+        if (fetchRangeStart > -1 && fetchRangeEnd < 0) {
+            throw new IllegalArgumentException("fetchRangeEnd must be > -1 if a fetchRangeStart " +
+                    "is specified");
+        }
 
         if (!StringUtils.isBlank(fetcherName)) {
             try {
-                return fetcherManager.getFetcher(fetcherName).fetch(fetchKey, metadata);
+                Fetcher fetcher = fetcherManager.getFetcher(fetcherName);
+                if (fetchRangeStart > -1 && fetchRangeEnd > -1) {
+                    if (!(fetcher instanceof RangeFetcher)) {
+                        throw new IllegalArgumentException(
+                                "Requesting a range fetch from a fetcher " +
+                                        "that doesn't support range fetching?!");
+                    }
+                    return ((RangeFetcher) fetcher).fetch(fetchKey, fetchRangeStart, fetchRangeEnd,
+                            metadata);
+                } else {
+                    return fetcher.fetch(fetchKey, metadata);
+                }
             } catch (TikaException e) {
                 throw new IOException(e);
             }
         }
         return is;
+    }
+
+    /**
+     * Tries to parse a long out of the value.  If the val is blank, it returns -1.
+     * Throws {@link NumberFormatException}
+     *
+     * @param val
+     * @return
+     */
+    private static long getLong(String val) {
+        if (StringUtils.isBlank(val)) {
+            return -1;
+        }
+        return Long.parseLong(val);
     }
 }
